[project]
name = "puryfi-chaster-linker-ws"
version = "0.2.0"
description = "Puryfi Chaster Linker by PluneCorp"
authors = [{ name = "Sereti" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "msgpack>=1.1.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "beanie>=2.1.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
    "cuid2>=2.0.1",
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
